--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #chart {
-	width: 800px;
+	width: 900px;
 	height: 500px;
 }
 
@@ -30,4 +30,9 @@ svg .axis text {
 
 svg .test {
 	stroke: #000;
+}
+
+svg .name {
+	font-size: 10px;
+	dominant-baseline: middle;
 }
