--- a/style.css
+++ b/style.css
@@ -5,7 +5,15 @@
 
 .dataline {
 	fill: none;
-	stroke: #777;
+	stroke: #222;
+	stroke-width: 1.5px;
+	shape-rendering: geometricPrecision;
+}
+
+.fakeline {
+	fill: none;
+	stroke: #222;
+	stroke-dasharray: 5,5;
 	stroke-width: 1.5px;
 	shape-rendering: geometricPrecision;
 }
@@ -17,7 +25,7 @@
 svg .axis path,
 svg .axis line {
 	fill: none;
-	stroke: #000;
+	stroke: #555;
 	stroke-width: 1px;
 	shape-rendering: crispEdges;
 }
